Fri May 30 04:48:00 2014  Eric Wong  <e@80x24.org>

	* parse.y (rb_gc_mark_parser): remove, empty since r8758
	* internal.h: ditto, not usable from extensions since 2.0.0
	* gc.c (gc_mark_roots): remove checkpoint for parser

Thu May 29 23:27:50 2014  Rei Odaira  <Rei.Odaira@gmail.com>

	* signal.c (ruby_signal): should return either `old.sa_sigaction`
	  or `old.sa_handler`, depending on whether `SA_SIGINFO` is set in
	  `old.sa_flags`, because they may not be a union.
	  [ruby-core:62836] [Bug #9878]

Thu May 29 23:11:20 2014  Tanaka Akira  <akr@fsij.org>

	* io.c (pipe_open): Close pipes when rb_execarg_fixup() raises
	  an exception.
	  (rb_execarg_fixup_v): New function.

Thu May 29 22:18:57 2014  Tanaka Akira  <akr@fsij.org>

	* test/lib/minitest/unit.rb (capture_subprocess_io): Close fds.

Thu May 29 19:47:08 2014  Tanaka Akira  <akr@fsij.org>

	* io.c (rb_io_s_pipe): Close pipes if io_encoding_set() raises an
	  exception.
	  (io_encoding_set_v): New function.

Thu May 29 19:42:49 2014  Tanaka Akira  <akr@fsij.org>

	* lib/csv.rb (CSV.open): Close the opened file when an exception
	  occur.

Thu May 29 19:31:10 2014  Tanaka Akira  <akr@fsij.org>

	* ext/openssl/lib/openssl/ssl.rb (SSLServer#accept): Close a socket
	  if any exception occur.

Thu May 29 05:05:29 2014  Eric Wong  <e@80x24.org>

	* include/ruby/ruby.h: Hide Symbol internals.
	  (struct RSymbol): moved to internal.h
	  (RSYMBOL): ditto

Thu May 29 00:28:56 2014  Tanaka Akira  <akr@fsij.org>

	* ext/socket/unixsocket.c (rsock_init_unixsock): Open a socket
	  after path length check.
	  This fixes a fd leak by TestSocket_UNIXSocket#test_too_long_path.

Wed May 28 23:04:35 2014  Tanaka Akira  <akr@fsij.org>

	* test/ruby/test_io.rb (test_flush_in_finalizer1): Use
	  ObjectSpace.each_object to close files.
	  GC.start is not reliable.

Wed May 28 19:00:31 2014  Tanaka Akira  <akr@fsij.org>

	* lib/net/imap.rb (Net::IMAP#initialize): Close the opened socket when
	  any exception occur.